Bug 135269 No Open Bookmarks File menu option r=varga sr=alecf